align colors of planer and my courses, fixes #9101
git-svn-id: svn://develop.studip.de/studip/trunk@59207 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/tables.less
+++ b/resources/assets/stylesheets/less/tables.less
@@ -162,21 +162,11 @@ td.tree-elbow-line, td.tree-elbow-end {
 }
 
 /* --- Sonstige ------------------------------------------------------------- */
-.gruppe0 { background-color: @activity-color-80 !important; }
-.gruppe1 { background-color: @red !important; }
-.gruppe2 { background-color: @orange-80 !important; }
-.gruppe3 { background-color: @orange-40 !important; }
-.gruppe4 { background-color: @green-80 !important; }
-.gruppe5 { background-color: @green-40 !important; }
-.gruppe6 { background-color: @content-color-60 !important; }
-.gruppe7 { background-color: @base-color-60 !important; }
-.gruppe8 { background-color: @violet !important; }
-
 .gruppe0 { background-color: @dark-violet !important; }
 .gruppe1 { background-color: @violet !important; }
 .gruppe2 { background-color: @red !important; }
 .gruppe3 { background-color: @orange !important; }
-.gruppe4 { background-color: @activity-color !important; }
+.gruppe4 { background-color: @yellow !important; }
 .gruppe5 { background-color: @green !important; }
 .gruppe6 { background-color: @dark-green !important; }
 .gruppe7 { background-color: @petrol !important; }
